# RecreateDocsFromRepo

./: .gitignore  CHANGELOG.md  CLAUDE.md  GIT_FLOW.md  README.md  git-flow-update-current  main.py  pyproject.toml  pytest.ini  requirements.txt  run_real_api_tests.sh  setup.py
.cursor/dev-process/: CLAUDE.mdc
.cursor/rules/: pattern_recognition.mdc
.cursor/rules/cli/: stream_redirection.mdc
.cursor/rules/flow/: gitflow_rule.mdc
.github/workflows/: feature-completion.yml
docs/: test_report_framework_detection.md  user_stories_manifest.json
docs/design/: ai_integration.md  component_interactions.md  documentation_final_assembly.md  documentation_navigation_elements.md  documentation_structure_manager.md  framework_detection.md  index.md  physical_scenarios_views.md  system_architecture.md  uml_diagram_generators.md
docs/epics/: README.md  index.md
docs/epics/01-repository-analysis/: 01-file-type-detection.md  02-language-support-primary.md  03-language-support-secondary.md  04-config-file-analysis.md  (+2 more)
docs/handbooks/: prd_creation_guide.md  product_manager_handbook.md
docs/product/: prd.md  problem_statement.md
docs/project/: status_tracking.md  value_analysis.md  velocity_report.md
docs/templates/: task_template.md
src/agents/: architecture_agent.py  base_agent.py
src/file_analyzer/: __init__.py  cache_manager.py  main.py  relationship_visualization.py  repo_scanner.py  repo_scanner_cli.py
src/templates/: README.md  architecture.md.j2
src/utils/: doc_generator.py  repo_analyzer.py
tests/: test_architecture_agent.py  test_doc_generator.py
(+149 files in other folders)
